k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smlgpt
  labels:
    name: smlgpt
    environment: production
